tests/negative/neg_channel_indefinite.safe
-- Test: neg_channel_indefinite
-- Description: Channel element types must be definite.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p14:a35bd0fa
-- Expected: REJECT source_frontend_error

package channel_indefinite_test

   subtype index is integer (1 to 8);
   type buffer is array (index range <>) of integer;

   channel data_ch : buffer capacity 1;

